# watchlist

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresetsExample.json  GitVersion.yml  README.md  version.hpp
.codex/: AGENTS.md  coro_gene_concurrency.md
.docker/: alpine_synology.Dockerfile
bazina_examples/: .gitmodules  CMakeLists.txt
bazina_examples/src/icsw_threading_demo/: ScanManager.cpp  ScanManager.hpp  SystemStatus.hpp
bazina_examples/tools/: setup_and_build.sh  setup_cpp.sh
cmake/: CompilerSettings.cmake  GitVersionConfig.cmake
development/: dev_tests.cpp  dev_tests.hpp  diamond_problem.cpp  exception_throwing.cpp  exception_throwing.hpp  factory_design.cpp  factory_design.hpp  import_this.hpp  main.cpp  memory_mng.cpp  memory_mng.hpp  pure_virtual_method_in_abs_cls.cpp  pure_virtual_method_in_abs_cls.hpp  pure_virtual_method_in_abs_cls_constructor.cpp  pure_virtual_method_in_abs_cls_constructor.hpp  sine_wave.cpp  sine_wave.hpp  test.cpp  test.hpp  unique_ptrs.cpp  unique_ptrs.hpp
development/cracking_code_interview/: smart_ptr_428.cpp  smart_ptr_428.hpp
development/excluded/: time_zones_for_logger.cpp
development/ftapp_tcp/: datastream_tcp_client.cpp  datastream_tcp_client.h
docs/: Database.md  DevelopmentEnvironment.md  TracyWatchlistExample.md
docs/Concurrency/: coro_gene_concurrency.md
docs/Cookbook/: layout_cookbook.drawio  layout_cookbook_default.drawio
docs/Theory/: GitVersion.md  Licensing.md
docs/theory/: RAII.md
personal/: readme.md
src/: Precompiled.hpp  Version.h.in  version.rc.in
src/Common/: Version.hpp  VersionExample.hpp  version.hpp
src/Examples/Concurrency/: ConcurrencyExamples.cpp  ConcurrencyExamples.hpp
src/Examples/Ideal_Structure_Library_Example/: readme.md
src/Examples/Ideal_Structure_Library_Example/include/detail/: api_helpers.hpp
src/Examples/multithread_demo/: MultithreadDemo.cpp
src/Gui/: Gui.cpp  Gui.hpp  MyApp.cpp
src/Ideal_Structure_Library_Example/: library.md
src/Ideal_Structure_Library_Example/include/: api.hpp
src/Ideal_Structure_Library_Example/src/: library.hpp
src/Utils/Concurrency/: AsyncEventLoop.hpp  EventLoopCoroutine.hpp  EventLoopGenerator.hpp  ThreadPoolManager.hpp  readme.md
src/Utils/Gui/: Gui.cpp  Gui.hpp  MyApp.cpp  MyApp.hpp
src/Utils/Logger/: Logger.cpp  Logger.hpp
src/Utils/Profiling/: TracyProfiling.hpp
src/Utils/Storage/: DatabaseItem.hpp  IDatabase.hpp  MySQLDatabase.cpp  MySQLDatabase.hpp  SQLiteDatabase.cpp  SQLiteDatabase.hpp
src/Utils/Storage/Examples/: DeviceDatabaseItemExample.cpp  DeviceDatabaseItemExample.hpp
src/Utils/Thread/: Thread.hpp  thread.md
src/Utils/Threading/: EventLoopCoroutine.hpp  EventLoopGenerator.hpp  HybridEventLoop.hpp  ThreadPoolManager.hpp  readme_AI_chat.md
src/Watchlist/: Application.cpp  Logger.cpp  Logger.hpp  SQLiteThreadWorker.cpp  SQLiteThreadWorker.hpp  SQLiteThreadWorkerExample.cpp  SQLiteThreadWorkerExample.hpp  ThreadPool.hpp  ThreadPoolManager.hpp  Utils.hpp  Watchlist.cpp  main.cpp  main.hpp
src/examples/: multithread.cpp
src/examples/Logger/: Logger.cpp
src/examples/multithread_demo/: MultithreadDemo.cpp
src/watchlist/: thread_pool.hpp  utlis.hpp
test/: test.cpp
test/outside_sources/: test-logger.cpp  test_previous.cpp
tests/: tests.md
tests/UnitTests/Storage/: SQLiteDatabaseTests.cpp
tools/: build.sh  setup_cpp.sh
tools/Linux/: setup_and_build.sh  setup_cpp.sh
tools/Windows/: readme_setup_cpp.md  setup_cpp.bat
zdeneks_examples/: .clang-format  README.md
zdeneks_examples/cmake_examples/: CMakeLists.txt
zdeneks_examples/src/icsw_threading_demo/: CommInterface.hpp  Instrument.hpp  SystemStatus.cpp  Utils.hpp
